--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "aws-amplify-react": "^1.0.4",
     "aws-amplify-react-native": "^1.0.4",
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-navigation": "^2.9.3"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
