--- a/awsmobilejs/backend/mobile-hub-project.yml
+++ b/awsmobilejs/backend/mobile-hub-project.yml
@@ -8,13 +8,13 @@ features:
   sign-in: !com.amazonaws.mobilehub.v0.SignIn 
     attributes:
       enabled: true
-      optional-sign-in: true
+      optional-sign-in: false
     components:
       sign-in-user-pools: !com.amazonaws.mobilehub.v0.UserPoolsIdentityProvider 
         attributes:
           alias-attributes:
+            - preferred_username
             - email
-            - phone_number
           mfa-configuration: ON
           name: userpool
           password-policy: !com.amazonaws.mobilehub.ConvertibleMap 
@@ -23,5 +23,6 @@ features:
             require-numbers: true
             require-symbols: true
             require-upper-case: true
+          standard-attributes: '[]'
 name: prototype2
 region: us-east-1
