--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.12",
     "aws-amplify": "^1.0.4",
     "aws-amplify-react": "^1.0.4",
     "aws-amplify-react-native": "^1.0.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "react": "16.4.1",
+    "react-apollo": "^2.1.9",
     "react-native": "0.56.0",
     "react-navigation": "^2.9.3"
   },
