--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-svg')
     compile project(':react-native-vector-icons')
     compile project(':amazon-cognito-identity-js')
     compile fileTree(dir: "libs", include: ["*.jar"])
