--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.12",
     "aws-amplify": "^1.0.4",
     "aws-amplify-react": "^1.0.4",
     "aws-amplify-react-native": "^1.0.4",
     "aws-appsync": "^1.3.2",
     "aws-appsync-react": "^1.1.2",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
+    "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-apollo": "^2.1.9",
     "react-native": "0.56.0",
-    "react-native-elements": "^0.19.1",
+    "react-native-svg": "^6.5.2",
+    "react-native-svg-charts": "^5.2.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.9.3",
     "uuid": "^3.3.2"
