--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shoutem/ui": "^0.23.4",
     "aws-amplify": "^1.0.4",
     "aws-amplify-react": "^1.0.4",
     "aws-amplify-react-native": "^1.0.4",
